objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Mack</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Delivered</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>Ordered</fullName>
        </values>
        <values>
            <fullName>Quoted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Other</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Delivered</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>Ordered</fullName>
        </values>
        <values>
            <fullName>Quoted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Volvo</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Delivered</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>Ordered</fullName>
        </values>
        <values>
            <fullName>Quoted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Quantity__c</fullName>
        <description>Actual Quantity of Trucks sold in the Opportunity</description>
        <label>Actual Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volvo</fullName>
                </value>
                <value>
                    <fullName>Mack</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>Competitors for the Opportunity</description>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mack</fullName>
                </value>
                <value>
                    <fullName>Kenworth</fullName>
                </value>
                <value>
                    <fullName>Peterbilt</fullName>
                </value>
                <value>
                    <fullName>Volvo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedByProfile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>Created By Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedByRole__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Agreement__c</fullName>
        <label>Deal Agreement #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code_Credited_To__c</fullName>
        <description>Opportunity should be credited to this Dealer Code</description>
        <label>Dealer Code Credited To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code_for_Opportunity__c</fullName>
        <formula>Partner_Account__r.Dealer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Code for Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Delivery_Date__c</fullName>
        <description>Desired date for Delivery of Vehicles</description>
        <label>Desired Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Quantity__c</fullName>
        <description>Estimated Quantity of Trucks to be sold as part of the Opportunity</description>
        <label>Estimated Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invite_Sales_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used to provide visibility to the Opportunity to Internal Users as Defined by the Account Team Membership, sets up an Opportunity team based on OEM</description>
        <label>Invite Sales Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadBrand__c</fullName>
        <label>Brand</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadIndustry__c</fullName>
        <label>Industry</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSegment__c</fullName>
        <label>Segment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Attended_Tradeshow_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Tradeshow Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Attended_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Webinar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Product_Interest__c</fullName>
        <label>Product Interest</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <label>Lead Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mack</fullName>
                </value>
                <value>
                    <fullName>Volvo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Truck_Configuration_URL__c</fullName>
        <label>Truck Configuration URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_User_Comments__c</fullName>
        <label>User Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Detail__c</fullName>
        <label>Lost Reason Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <description>Reasons that can be selected with the opportunity is Closed / Lost</description>
        <inlineHelpText>Please enter Lost Reason Detail if you select Price or Other</inlineHelpText>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aftermarket Support</fullName>
                </value>
                <value>
                    <fullName>Buyback Required by Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Credit</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Did Not Buy</fullName>
                </value>
                <value>
                    <fullName>Finance / Leasing</fullName>
                </value>
                <value>
                    <fullName>Lead Time</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product Availability</fullName>
                </value>
                <value>
                    <fullName>Product Experience</fullName>
                </value>
                <value>
                    <fullName>Product Operating Cost</fullName>
                </value>
                <value>
                    <fullName>Product Specification</fullName>
                </value>
                <value>
                    <fullName>Proximity to Dealer Location</fullName>
                </value>
                <value>
                    <fullName>Purchased Used</fullName>
                </value>
                <value>
                    <fullName>Purchased Competitor Model</fullName>
                </value>
                <value>
                    <fullName>Relationship with Competitor</fullName>
                </value>
                <value>
                    <fullName>Residual Value</fullName>
                </value>
                <value>
                    <fullName>Service Issues</fullName>
                </value>
                <value>
                    <fullName>Trade-In Value</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Time_Frame__c</fullName>
        <description>Order Time Frame</description>
        <label>Order Time Frame</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerProfile__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <label>Opportunity Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerRole__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <label>Opportunity Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Credited Dealer for Opportunity</inlineHelpText>
        <label>Assigned Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Assigned Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_ID__c</fullName>
        <description>Accounts Party ID</description>
        <formula>Account.Party_ID__c</formula>
        <inlineHelpText>Account Party ID</inlineHelpText>
        <label>Party ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Model_Details__c</fullName>
        <label>Primary Model Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Model__c</fullName>
        <label>Primary Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>VAH</fullName>
                </value>
                <value>
                    <fullName>VHD</fullName>
                </value>
                <value>
                    <fullName>VNL</fullName>
                </value>
                <value>
                    <fullName>VNR</fullName>
                </value>
                <value>
                    <fullName>VNX</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Granite</fullName>
                </value>
                <value>
                    <fullName>Granite MHD</fullName>
                </value>
                <value>
                    <fullName>LR</fullName>
                </value>
                <value>
                    <fullName>Pinnacle</fullName>
                </value>
                <value>
                    <fullName>Terrapro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promised_Delivery_Date__c</fullName>
        <description>Promised Delivery of Trucks in the Opportunity</description>
        <label>Promised Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Time_Frame__c</fullName>
        <description>Predictive Purchase Time Frame</description>
        <inlineHelpText>Predictive Purchase Time Frame</inlineHelpText>
        <label>Purchase Time Frame</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Expiration_Date__c</fullName>
        <label>Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Valid_For__c</fullName>
        <formula>TEXT(Quote_Expiration_Date__c - TODAY()) &amp; &quot; &quot; &amp; &quot;Days&quot;</formula>
        <label>Quote Valid For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSA_num__c</fullName>
        <label>RSA #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSA_percent__c</fullName>
        <label>RSA %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Assistance__c</fullName>
        <label>Sales Assistance %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CST &gt;10L</fullName>
                </value>
                <value>
                    <fullName>CST &lt;10L</fullName>
                </value>
                <value>
                    <fullName>LH</fullName>
                </value>
                <value>
                    <fullName>LCOE</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sleeper_Cab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sleeper Cab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Dealer_Code__c</fullName>
        <formula>Territory2.Dealer_Code__c</formula>
        <label>Territory Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>Estimated price per unit</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Adaptations__c</fullName>
        <label>Vehicle Adaptations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isBrand__c</fullName>
        <formula>IF(RecordType.Name = TEXT($User.Dealer_Brand__c),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBrand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCreatedBy__c</fullName>
        <formula>$User.Id = CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isCreatedBy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDealerCode__c</fullName>
        <formula>IF(Partner_Account__r.Dealer_Code__c = $User.Dealer_Code__c,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isDealerCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDealerManager__c</fullName>
        <formula>Owner.Dealer_Manager__r.User_Id__c  =  $User.User_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isDealerManager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExecGroupBrandFree__c</fullName>
        <formula>CONTAINS($User.Mgmt_Dealer_Codes__c, Partner_Account__r.Dealer_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isExecGroupBrandFree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExecutiveGroup__c</fullName>
        <formula>CONTAINS($User.Executive_group__c, Partner_Account__r.Dealer_Code__c)</formula>
        <label>isExecutiveGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isStrategicAccount__c</fullName>
        <formula>Account.Strategic_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isStrategicAccount</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>Partner_Account__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>notContain</operation>
            <value>Shiv</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All Opportunities</label>
        <sharedTo>
            <group>Corporate_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>Primary_Model__c</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Partner_Account__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>isBrand__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
        <sharedTo>
            <group>Mack_District_Sales_Managers</group>
            <group>Mack_National_Accounts_Managers</group>
            <group>Mack_National_Accounts_Vice_Presidents</group>
            <group>Mack_Regional_Fleet_Managers</group>
            <group>Volvo_District_Sales_Managers</group>
            <group>Volvo_National_Accounts_Managers</group>
            <group>Volvo_National_Accounts_Vice_President</group>
            <group>Volvo_Regional_Fleet_Managers</group>
            <role>CEO</role>
            <role>Director_Mack_Vocational_Fleet_Sales</role>
            <role>Mack_Corporate_Support_User</role>
            <role>Mack_Sales_Support_Admin</role>
            <role>Mack_Senior_Vice_President</role>
            <role>Mack_Vice_President</role>
            <role>Mack_Vocational_National_Accounts_Manager</role>
            <role>Volvo_Senior_Vice_President</role>
            <role>Volvo_Vice_President</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closing_Next_Month</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>Primary_Model__c</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Partner_Account__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>isBrand__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Closing Next Month</label>
        <sharedTo>
            <group>Mack_District_Sales_Managers</group>
            <group>Mack_National_Accounts_Managers</group>
            <group>Mack_National_Accounts_Vice_Presidents</group>
            <group>Mack_Regional_Fleet_Managers</group>
            <group>Volvo_District_Sales_Managers</group>
            <group>Volvo_National_Accounts_Managers</group>
            <group>Volvo_National_Accounts_Vice_President</group>
            <group>Volvo_Regional_Fleet_Managers</group>
            <role>Director_Mack_Vocational_Fleet_Sales</role>
            <role>Mack_Corporate_Support_User</role>
            <role>Mack_Sales_Support_Admin</role>
            <role>Mack_Senior_Vice_President</role>
            <role>Mack_Vice_President</role>
            <role>Mack_Vocational_National_Accounts_Manager</role>
            <role>Volvo_Senior_Vice_President</role>
            <role>Volvo_Vice_President</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>Primary_Model__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>isBrand__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Lost</label>
        <sharedTo>
            <group>Mack_District_Sales_Managers</group>
            <group>Mack_National_Accounts_Managers</group>
            <group>Mack_Regional_Fleet_Managers</group>
            <group>Volvo_District_Sales_Managers</group>
            <group>Volvo_National_Accounts_Managers</group>
            <group>Volvo_Regional_Fleet_Managers</group>
            <role>CEO</role>
            <role>Mack_Corporate_Support_User</role>
            <role>Mack_Sales_Support_Admin</role>
            <role>Mack_Senior_Vice_President</role>
            <role>Mack_Vice_President</role>
            <role>Mack_Vocational_National_Accounts_Manager</role>
            <role>Volvo_Senior_Vice_President</role>
            <role>Volvo_Vice_President</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Brand__c</columns>
        <columns>Primary_Model__c</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>isDealerCode__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>isBrand__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Other</value>
        </filters>
        <label>My Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Dealership</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Brand__c</columns>
        <columns>Primary_Model__c</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isDealerCode__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>isBrand__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Other</value>
        </filters>
        <filters>
            <field>OwnerRole__c</field>
            <operation>contains</operation>
            <value>PARTNER</value>
        </filters>
        <label>My Dealership&apos;s Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <group>Dealer_Sales_Executives</group>
            <group>Dealer_Sales_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Dealership_s_Open_Opportunities</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4 AND 5</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Brand__c</columns>
        <columns>Primary_Model__c</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Desired_Delivery_Date__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isDealerCode__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>isBrand__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Other</value>
        </filters>
        <filters>
            <field>OwnerRole__c</field>
            <operation>contains</operation>
            <value>PARTNER</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Identify,Quoted</value>
        </filters>
        <label>My Dealership&apos;s Open Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <group>Dealer_Sales_Executives</group>
            <group>Dealer_Sales_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Identify,Quoted</value>
        </filters>
        <label>My Open Opportunities</label>
        <sharedTo>
            <role>Canada_Mack_District_Sales_Manager</role>
            <role>Canada_Mack_Regional_Fleet_Manager</role>
            <role>Canada_Volvo_District_Sales_Manager</role>
            <role>Canada_Volvo_Regional_Fleet_Manager</role>
            <role>Mack_National_Accounts_Manager</role>
            <role>Mack_Vocational_National_Accounts_Manager</role>
            <role>US_Central_Mack_District_Sales_Manager</role>
            <role>US_Central_Mack_Regional_Fleet_Manager</role>
            <role>US_Central_Volvo_District_Sales_Manager</role>
            <role>US_Central_Volvo_Regional_Fleet_Manager</role>
            <role>US_Northeast_Mack_District_Sales_Manager</role>
            <role>US_Northeast_Mack_Regional_Fleet_Manager</role>
            <role>US_Northeast_Volvo_District_Sales_Manager</role>
            <role>US_Northeast_Volvo_Regional_Fleet_Manager</role>
            <role>US_Southeast_Mack_District_Sales_Manager</role>
            <role>US_Southeast_Mack_Regional_Fleet_Manager</role>
            <role>US_Southeast_Volvo_District_Sales_Manager</role>
            <role>US_Southeast_Volvo_Regional_Fleet_Manager</role>
            <role>US_Southwest_Mack_District_Sales_Manager</role>
            <role>US_Southwest_Mack_Regional_Fleet_Manager</role>
            <role>US_Southwest_Volvo_District_Sales_Manager</role>
            <role>US_Southwest_Volvo_Regional_Fleet_Manager</role>
            <role>US_Western_Mack_District_Sales_Manager</role>
            <role>US_Western_Mack_Regional_Fleet_Manager</role>
            <role>US_Western_Volvo_District_Sales_Manager</role>
            <role>US_Western_Volvo_Regional_Fleet_Manager</role>
            <role>Volvo_National_Accounts_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities_Dealer</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Brand__c</columns>
        <columns>Primary_Model__c</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Desired_Delivery_Date__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>isDealerCode__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>isBrand__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Other</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Identify,Quoted</value>
        </filters>
        <label>My Open Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_Dealer</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Brand__c</columns>
        <columns>Primary_Model__c</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Desired_Delivery_Date__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>isDealerCode__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>isBrand__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Other</value>
        </filters>
        <label>My Opportunities</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
</CustomObject>